CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Liver-PreProcess)

FIND_PACKAGE(ITK)

IF(ITK_FOUND)
INCLUDE(${ITK_USE_FILE}) 
ELSE(ITK_FOUND)
MESSAGE(FATAL_ERROR "ITK not found. Please set ITK_DIR.")

ENDIF(ITK_FOUND) 

ADD_EXECUTABLE(Liver-PreProcess MACOSX_BUNDLE PreProcess.cpp PreProcess.h) 

TARGET_LINK_LIBRARIES(Liver-PreProcess ${ITK_LIBRARIES})